--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "browser-sync": "^2.11.1",
     "gulp": "^3.9.1",
     "gulp-less": "^3.0.5",
-    "jquery": "^2.2.1"
+    "jquery": "^2.2.1",
+    "jquery.equalheights": "^1.5.3"
   }
 }
